k8s/bazarr/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr-service
  namespace: bazarr
spec:
  selector:
    app: bazarr
  ports:
    - protocol: TCP
      port: 6767
      targetPort: 6767
