k8s/bazarr/04-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr-ingressroute
  namespace: bazarr
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`bazarr.localhost`)
      kind: Rule
      services:
        - name: bazarr-service
          port: 6767
